## Our one and only program
bin_PROGRAMS = chmdeco

## Sources and headers for the program
chmdeco_SOURCES = \
chmdeco.c common.c convert.c hhc.c hhk.c hhp.c misc.c sitemap.c strings_file.c system.c windows.c \
chmdeco.h common.h convert.h hhc.h hhk.h hhp.h misc.h sitemap.h strings_file.h system.h windows.h

